<resources>
    <string name="app_name">examcram</string>
    <string name="sign_in">Sign in</string>
    <string name="please_sign_in">Please sign in.</string>
    <string name="password">Password</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="username">Username</string>
    <string name="agree">I agree to the terms and conditions...</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string-array name="countries">
        <item>Country</item>
        <item>USA</item>
        <item>United Kingdom</item>
        <item>Turkey</item>
        <item>Germany</item>
    </string-array>
    <string-array name="bilkent_courses">
        <item>Select Courses</item>
        <item>MATH 101</item>
        <item>MATH 102</item>
        <item>MATH 132</item>
        <item>PHYS 101</item>
        <item>PHYS 102</item>
        <item>CS 101</item>
        <item>CS 102</item>
        <item>CS 115</item>
        <item>CS 201</item>
        <item>CS 202</item>
        <item>ENG 101</item>
        <item>ENG 102</item>
    </string-array>

    <string-array name="harvard_courses">
        <item>Select Courses</item>
        <item>CALC 1000</item>
        <item>CALC 2000</item>
        <item>CS 77</item>
        <item>CS 32</item>
        <item>PHYS 1029</item>
        <item>CS 1011</item>
        <item>CS 1026</item>
        <item>CS 1155</item>
        <item>CS 2010</item>
        <item>CS 2024</item>
        <item>ENG 00</item>
        <item>ENG 01</item>
    </string-array>

<<<<<<< Updated upstream
=======
    <string-array name="Math101">
        <item>Select a sub category</item>
        <item>Limits and Continuity</item>
        <item>Differentiation</item>
        <item>Applications of Derivatives</item>
        <item>Integration</item>
        <item>Applications of Definite Integrals</item>
        <item>Techniques of Integration</item>
    </string-array>

    <string-array name="Math102">
        <item>Select a sub category</item>
        <item>Sequences and Series</item>
        <item>Vectors</item>
        <item>Lines, Planes, Curve</item>
        <item>Partial Derivatives</item>
        <item>Multiple Integrals</item>
    </string-array>

    <string-array name="Math132">
    <item>Select a sub category</item>
    <item>Sets, functions, cardinality of sets</item>
    <item>Modular arithmetic, primes and greatest common divisor</item>
    <item>Congruences and their applications</item>
    <item>Induction and well-ordering</item>
    <item>The pigeonhole principle</item>
    <item>Permutations and combinations</item>
    <item>Recurrence relations</item>
    <item>Generating functions</item>
    <item>Inclusion/exclusion</item>
    <item>General theory</item>
</string-array>

    <string-array name="PHYS101">
        <item>Select a sub category</item>
        <item>Units, Physical Quantities, and Vectors</item>
        <item>Motion Along a Straight Line</item>
        <item>Newton's Laws of Motion</item>
        <item>Applying Newton's Laws</item>
        <item>Work and Kinetic Energy</item>
        <item>Potential Energy and Energy Conservation</item>
        <item>Momentum, Impulse, and Collisions</item>
        <item>Rotation of Rigid Bodies</item>
        <item>Dynamics of Rotational Motion</item>
        <item>Gravitation</item>
    </string-array>

    <string-array name="PHYS102">
        <item>Select a sub category</item>
        <item>Electric Charge and Electric Field</item>
        <item>Gauss`s law</item>
        <item>Electric Potential</item>
        <item>Capacitance and Dielectrics</item>
        <item>Direct-Current Circuits</item>
        <item>Magnetic Field and Magnetic Forces</item>
        <item>Sources of Magnetic Field</item>
        <item>Electromagnetic Induction</item>
        <item>Inductance</item>
        <item>Alternating Current</item>
        <item>Electromagnetic Waves</item>
    </string-array>

    <string-array name="CS101">
        <item>Select a sub category</item>
        <item>Algorithms</item>
        <item>Computer Architecture</item>
        <item>Fundamental Data Types</item>
        <item>Input, Output and Assignment</item>
        <item>Decisions</item>
        <item>Repetition</item>
        <item>Methods</item>
        <item>Writing, Using classes</item>
        <item>ArrayLists, Arrays</item>
        <item>Basic Searching and Sorting</item>
        <item>Partially-filled arrays</item>
    </string-array>

    <string-array name="CS102">
        <item>Select a sub category</item>
        <item>Inheritance and polymorphism</item>
        <item>Abstract classes and interfaces</item>
        <item>GUI's</item>
        <item>Recursion</item>
        <item>Data Structures</item>
        <item>Repetition</item>
        <item>exceptions</item>
    </string-array>

    <string-array name="CS115">
        <item>Select a sub category</item>
        <item>Branching, Strings, Input, Iteration</item>
        <item>Simple numerical programs</item>
        <item>Functions, Scoping, and Abstraction</item>
        <item>Global Variables, Modules, Files</item>
        <item>Structured Types, Mutability, and Higher-Order Functions </item>
        <item>Arrays</item>
        <item>Classes and Object-Oriented Programming</item>
        <item>Algorithmic Complexity</item>
        <item>Plotting</item>
        <item>Data Visualization</item>
        <item>Understanding Experimental Data</item>
    </string-array>

    <string-array name="CS201">
        <item>Select a sub category</item>
        <item>Functions</item>
        <item>Arrays</item>
        <item>Pointers</item>
        <item>Case study</item>
        <item>Recursion, Algorithm analysis</item>
        <item>Lists</item>
        <item>Stacks</item>
        <item>Queues</item>
    </string-array>

    <string-array name="CS202">
        <item>Select a sub category</item>
        <item>Algorithm Efficiency and Sorting</item>
        <item>Trees</item>
        <item>Tables and Priority Queues</item>
        <item>Advanced Implementation of Tables</item>
        <item>Graphs</item>
    </string-array>

    <string-array name="ENG101">
        <item>Select a sub category</item>
        <item>Analysis and discussion of readings for academic essay 1</item>
        <item>Analysis and discussion of readings for academic essay 2</item>
        <item>Brainstorming and outlining for academic essay</item>
        <item>presentations</item>
    </string-array>

    <string-array name="ENG102">
        <item>Select a sub category</item>
        <item>Analysis and discussion of texts for essay</item>
        <item>Research Paper input and practice</item>
        <item>Library Skills Task</item>
        <item>End of Course Interview rehearsal</item>
    </string-array>
>>>>>>> Stashed changes

    <string-array name="turk_unis">
        <item>University</item>
        <item>Bilkent University</item>
        <item>Metu</item>
    </string-array>
    <string-array name="usa_unis">
        <item>University</item>
        <item>Harvard University</item>
        <item>Columbia University</item>
    </string-array>
    <string-array name="uk_unis">
        <item>University</item>
        <item>Oxford University</item>
    </string-array>
    <string-array name="germany_unis">
        <item>University</item>
        <item>Munich University</item>
    </string-array>
    <string-array name="uni">
        <item>University</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>